@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.imports;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -56,7 +55,7 @@ public class XpathRegressionImportOrderTest extends AbstractXpathTestSupport {
                         ImportOrderCheck.MSG_ORDERING, "java.util.Set"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT"
         );
 
@@ -77,7 +76,7 @@ public class XpathRegressionImportOrderTest extends AbstractXpathTestSupport {
                         ImportOrderCheck.MSG_SEPARATED_IN_GROUP, "java.util.Set"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='Set']]"
         );
 
@@ -100,7 +99,7 @@ public class XpathRegressionImportOrderTest extends AbstractXpathTestSupport {
                         ImportOrderCheck.MSG_SEPARATION, "org.junit.*"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/DOT/IDENT[@text='org']]"
         );
 
@@ -122,7 +121,7 @@ public class XpathRegressionImportOrderTest extends AbstractXpathTestSupport {
                         ImportOrderCheck.MSG_ORDERING, "java.lang.Math.PI"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/STATIC_IMPORT"
         );
 
@@ -144,7 +143,7 @@ public class XpathRegressionImportOrderTest extends AbstractXpathTestSupport {
                         ImportOrderCheck.MSG_ORDERING, "java.util.Date"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT/IMPORT[./DOT/IDENT[@text='Date']]"
         );
 
