@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.naming;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -58,7 +57,7 @@ public class XpathRegressionTypeNameTest extends AbstractXpathTestSupport {
                         AbstractNameCheck.MSG_INVALID_PATTERN, "SecondName_", pattern),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT"
                         + "/CLASS_DEF[./IDENT[@text"
                         + "='InputXpathTypeNameDefault']]"
@@ -84,7 +83,7 @@ public class XpathRegressionTypeNameTest extends AbstractXpathTestSupport {
                         AbstractNameCheck.MSG_INVALID_PATTERN, "SecondName", pattern),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
                 "/COMPILATION_UNIT"
                         + "/CLASS_DEF[./IDENT[@text"
                         + "='InputXpathTypeNameInterfaceDef']]"
