@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.whitespace;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -56,7 +55,7 @@ public class XpathRegressionNoWhitespaceBeforeTest extends AbstractXpathTestSupp
                     NoWhitespaceBeforeCheck.MSG_KEY, ";"),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathNoWhitespaceBefore']]/OBJBLOCK"
                 + "/VARIABLE_DEF[./IDENT[@text='bad']]/SEMI"
@@ -80,7 +79,7 @@ public class XpathRegressionNoWhitespaceBeforeTest extends AbstractXpathTestSupp
                 NoWhitespaceBeforeCheck.MSG_KEY, "."),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathNoWhitespaceBeforeTokens']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='test']]"
@@ -106,7 +105,7 @@ public class XpathRegressionNoWhitespaceBeforeTest extends AbstractXpathTestSupp
                 NoWhitespaceBeforeCheck.MSG_KEY, ","),
         };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathNoWhitespaceBeforeLineBreaks']]"
                 + "/OBJBLOCK/METHOD_DEF[./IDENT[@text='test']]"
