@@ -465,7 +465,7 @@ public class SuppressWarningsHolder
      */
     private static List<String> getAnnotationValues(DetailAST ast) {
         return switch (ast.getType()) {
-            case TokenTypes.EXPR -> Collections.singletonList(getStringExpr(ast));
+            case TokenTypes.EXPR -> List.of(getStringExpr(ast));
             case TokenTypes.ANNOTATION_ARRAY_INIT -> findAllExpressionsInChildren(ast);
             default -> throw new IllegalArgumentException(
                     "Expression or annotation array initializer AST expected: " + ast);
